[package]
name = "rustica"
version = "0.1.0"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
byteorder = "1.3.4"
hex = "*"
sha2 = "0.9.2"
ring = "0.16.9"
serde = { version = "1", optional = true }

[dev-dependencies]
serde_test = "1"
