[package]
name = "rustica"
version = "0.1.0"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
clap = "3.0.0-beta.2"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
futures-core = "0.3"
futures-util = "0.3"
hex = "*"
log = "*"
prost = "0.6"
ring = "0.16.9"
rustica-keys = {path = "../rustica-keys"}
sha2 = "0.9.2"
tokio = { version = "0.2", features = ["full"] }
tonic = {version = "0.3", features = ["tls"] }
yubikey-piv = {version = "0.1.0", features = ["untested"]}

[build-dependencies]
tonic-build = "0.3"