[package]
name = "rustica-agent-cli"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.5"
env_logger = "0.8.2"
hex = "0.4"
log = "0.4.13"
notify-rust = "4"
rustica-agent = {path = "../rustica-agent"}
sshcerts = {git = "https://github.com/obelisk/sshcerts", branch = "bug_fixes_2022_07_06", features = ["yubikey-support", "fido-support"]}
tokio = { version = "1", features = ["full"] }
toml = "*"
yubikey = "0.5"