[package]
name = "rustica-agent-cli"
version = "0.11.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.5"
env_logger = "0.8.2"
hex = "0.4"
log = "0.4.13"
notify-rust = "4"
rustica-agent = { path = "../rustica-agent" }
sshcerts = { version = "0.12", features = ["yubikey-support", "fido-support"] }
# sshcerts = { path = "../../sshcerts", features = [
#     "yubikey-support",
#     "fido-support",
# ] }
tokio = { version = "1", features = ["full"] }
toml = "0.7"
yubikey = "0.7"
