[package]
name = "rustica-agent-cli"
version = "0.12.0"
edition = "2021"

[features]
default = ["mozilla"]
mozilla = ["rustica-agent/mozilla"]
ctap2_hid = ["rustica-agent/ctap2_hid"]

[dependencies]
clap = "3.0.5"
env_logger = "0.8.2"
hex = "0.4"
log = "0.4.13"
notify-rust = "4"
rustica-agent = { path = "../rustica-agent", default-features = false }
tokio = { version = "1", features = ["full"] }
toml = "0.7"
yubikey = "0.7"
