[package]
name = "rustica-agent-gui"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
eframe = "0.19.0"
hex = "0.4"
home = "0.5"
rustica-agent = {path = "../rustica-agent"}
sshcerts = {git = "https://github.com/obelisk/sshcerts", branch = "bug_fixes_2022_07_06", features = ["yubikey-support", "fido-support"]}
#sshcerts = {path = "../../sshcerts", features = ["yubikey-support", "fido-support"]}
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing-subscriber = "0.3"