[package]
name = "rustica-agent-gui"
version = "0.12.0"
edition = "2021"

[features]
default = ["mozilla"]
mozilla = ["rustica-agent/mozilla"]
ctap2_hid = ["rustica-agent/ctap2_hid"]

[dependencies]
base64 = "0.12"
eframe = "0.22"
hex = "0.4"
home = "0.5"
rustica-agent = { path = "../rustica-agent", default-features = false }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing-subscriber = "0.3"
