[package]
name = "rustica-agent"
version = "0.9.0"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
byteorder = "1.4.2"
clap = "3.0.5"
env_logger = "0.8.2"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4.2"
lexical-core = {version = ">0.7.4"}
log = "0.4.13"
prost = "0.9"
ring = "0.16.20"
serde = "1.0.97"
serde_derive = "1.0"
sha2 = "0.9.2"
# For Production
#sshcerts = {version = "0.11.0", features = ["yubikey-support", "fido-support"]}
# For Development
sshcerts = {git = "https://github.com/obelisk/sshcerts", branch = "new_fido2", features = ["yubikey-support", "fido-support"]}
#sshcerts = {path = "../../sshcerts", features = ["yubikey-support", "fido-support"]}
tokio = { version = "1.0.0", features = ["full"] }
toml = "0.5.8"
tonic = {version = "0.6", features = ["tls"] }
yubikey = {version = "0.5", features = ["untested"]}

[build-dependencies]
tonic-build = "0.6"

[lib]
name = "rustica_agent"
crate-type = ["staticlib", "rlib"]
