[package]
name = "rustica-agent"
version = "0.12.0"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2021"

[features]
default = ["mozilla"]
mozilla = ["sshcerts/fido-support-mozilla", "sshcerts/yubikey-support"]
ctap2_hid = ["sshcerts/fido-support", "sshcerts/yubikey-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sshcerts = { git = "https://github.com/obelisk/sshcerts", branch = "moz_auth_2023", default-features = false }
async-trait = "0.1"
base64 = "0.12.1"
byteorder = "1.4.2"
env_logger = "0.8.2"
hex = "0.4.2"
log = "0.4.13"
prost = "0.11"
ring = "0.17"
serde = "1.0.97"
serde_derive = "1.0"
sha2 = "0.9.2"
# For Production
#sshcerts = { version = "0.12", features = ["yubikey-support", "fido-support"] }
# For Development
# sshcerts = { path = "../../sshcerts", features = [
#     "yubikey-support",
#     "fido-support",
# ] }
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tonic = { version = "0.9", features = ["tls"] }
yubikey = { version = "0.7", features = ["untested"] }
x509-parser = { version = "0.15", features = ["verify"] }

[build-dependencies]
tonic-build = "0.9"

[lib]
name = "rustica_agent"
crate-type = ["staticlib", "rlib"]
