[package]
name = "rustica"
version = "0.8.2"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2018"

[features]
default = []

all = ["amazon-kms", "influx", "splunk", "yubikey-support", "local-db"]

amazon-kms = ["aws-config", "aws-sdk-kms", "aws-types"]
influx = ["influxdb"]
local-db = ["diesel"]
splunk = ["reqwest", "serde_json"]
yubikey-support = ["sshcerts/yubikey-support"]

[dependencies]
base64 = "0.12.1"
clap = "3.0.5"
crossbeam-channel = "0.5"
env_logger = "0.8.2"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4.2"
log = "0.4.13"
prost = "0.7"
ring = "0.16.20"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.9.2"
# For Production
#sshcerts = { version = "0.9.1", default-features = false, features = ["x509-support"] }
# For Development
# sshcerts = {git = "https://github.com/obelisk/sshcerts", branch="more_versatile_certificate_signing", default-features = false, features = ["x509-support"]}
sshcerts = {path = "../../sshcerts", features = ["x509-support"]}
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tonic = { version = "0.4", features = ["tls"] }
x509-parser = { version = "0.9", features = ["verify"] }

# Dependencies for amazon-kms
aws-config = { version = "0.5", optional = true }
aws-sdk-kms = { version = "0.5", optional = true }
aws-types = { version = "0.5", optional = true }

# Dependencies for local-db
diesel = { version = "1.4.4", features = ["sqlite"], optional = true }

# Dependencies for Influx
influxdb = { version = "0.5.1", optional = true }

# Dependencies for Splunk
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"], optional = true }
serde_json = { version = "1.0", optional = true }

[build-dependencies]
tonic-build = "0.4"
